<resources>
    <string name="app_name">layout1</string>
    <string name="xyz">xyz</string>
    <string name="let_s_get_started">let\'s get started!</string>
    <string name="enable_location">ENABLE LOCATION</string>
    <string name="textView5">let\'s get started!</string>
    <string name="textView4"><![CDATA[we collect location data to show you xyz zones & journey routes, even when the app is closed or not in use. Allow xyz to access the device location.]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_xyz">Welcome to xyz!!</string>
    <string name="we_collect_location_data_to_show_you_xyz_zones_journey_routes_even_when_the_app_is_closed_or_not_in_use_allow_xyz_to_access_the_device_location"><![CDATA[we collect location data to show you xyz zones & journey routes, even when the app is closed or not in use. Allow xyz to access the device location.]]></string>
    <string name="next">Next</string>
    <string name="look_for_xyz_zones_parking_slots_near_your_location_check_the_destination_route_walk_towards_the_xyz_zone"><![CDATA[Look for XYZ zones/parking slots near your location, check the destination route & walk towards the XYZ Zone.]]></string>
    <string name="welcome_to_xyz_">Welcome to XYZ!</string>
    <string name="skip_">skip</string>
    <string name="pick_a_vehicle">pick a vehicle</string>
    <string name="to_unlock_your_vehicle_either_scan_the_qr_code_or_enter_the_vehicle_code_pull_up_the_lever_to_remove_the_stand_start_your_journey"><![CDATA[To unlock your vehicle, either scan the QR code or enter the vehicle code.. Pull up the lever to remove the stand & start your journey.]]></string>
    <string name="next_">next</string>
    <string name="to_unlock_your_vehicle_either_scan_the_qr_code_or_enter_the_vehicle_code_pull_up_the_lever_to_remove_the_stand_start_your_journey_"><![CDATA[To unlock your vehicle, either scan the QR code or enter the vehicle code.. Pull up the lever to remove the stand & start your journey.]]></string>
    <string name="pick_a_vehicle_">pick a vehicle</string>
    <string name="ride_safely">ride safely</string>
    <string name="observe_all_traffic_regulations_and_ride_safely_have_a_pleasant_journey">Observe all traffic regulations and ride safely. Have a pleasant journey!</string>
    <string name="end_ride_at_a_xyz_zone">End ride at a XYZ Zone</string>
    <string name="park_your_ride_only_at_a_designated_xyz_zone_and_tap_on_end_ride_connect_the_vehicle_to_the_charger_it_will_be_helpful_for_you_and_others_as_well">Park your ride only at a designated XYZ Zone and tap on “End ride”. Connect the vehicle to the charger, it will be helpful for you and others as well.</string>
    <string name="signup">signup</string>
    <string name="i_agree_the_quot_terms_conditions_quot"><![CDATA[I agree the \"terms &conditions\"]]></string>
    <string name="enter_password">enter password</string>
    <string name="password">password</string>
    <string name="enter_email">enter email</string>
    <string name="email">email</string>
    <string name="enter_name">enter name</string>
    <string name="name">name</string>
    <string name="or">or</string>
    <string name="create_an_account">create an account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="create_an_account_">Create an account</string>
    <string name="login_to_google_">login to google</string>
    <string name="enter_name_">enter name</string>
    <string name="sign_up_">sign up</string>
    <string name="i_agree_the_quot_terms_condition_quot"><![CDATA[I agree the \"terms & condition\"]]></string>
    <string name="i_agree_with_the_terms_condition_"><![CDATA[i agree with the \"terms & condition\"]]></string>
    <string name="create_an_accountt">Create an account</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="web_client_id">166754246093-60pofju6qqcktaono53bpgg1klse9mrc.apps.googleusercontent.com</string>
    <string name="We_collect_location_data_to_show_you_xyz_zones_journey_routes_even_when_the_app_is_closed_or_not_in_use_allow_xyz_to_access_the_device_location" />
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="settings">Settings</string>
    <string name="deleting_an_account_permanently_removes_all_associated_data_and_information_rendering_it_irretrievable">Deleting an account permanently removes all associated data and information, rendering it irretrievable.</string>
    <string name="enable_this_option_to_receive_notifications_for_better_ride_experience">Enable this option to receive notifications for better ride experience.</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="notification">Notification</string>
    <string name="choose_language">Choose Language</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="let_s_get_started1">Let\'s get started!</string>
    <string name="we_collect_location_data_to_show_you_xyz_zones_amp_journey_routes_even_when_the_app_is_closed_or_not_in_use_allow_xyz_to_access_the_device_location"><![CDATA[We collect location data to show you xyz zones & journey routes, even when the app is closed or not in use. Allow xyz to access the device location.]]></string>
    <string name="unlock">Unlock</string>
    <string name="ride_history">Ride History</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="settings1">Settings</string>
    <string name="offers">Offers</string>
    <string name="login_to_google">Login to Google</string>
    <string name="enter_name1">Enter Name</string>
    <string name="enter_email1">Enter Email</string>
    <string name="enter_password1">Enter Password</string>
    <string name="i_agree_with_the_quot_terms_amp_conditions_quot"><![CDATA[I agree with the \"Terms & Conditions\"]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="pick_a_vehicle1">Pick a vehicle</string>
    <string name="ride_safely1">Ride Safely!</string>
    <string name="skip1">skip</string>
    <string name="enter_code">Enter Code</string>
    <string name="cancel">Cancel</string>
    <string name="unlock1">Unlock</string>
    <string name="settings11">Settings</string>
    <string name="stop">Stop</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="refer_xyz_to_a_friend_amp_get_40_ecash"><![CDATA[Refer XYZ to a friend & get $40 eCash]]></string>
    <string name="benefits">Benefits:</string>
    <string name="you_get_an_ecash_of_40_when_they_take_the_first_ride">You get an eCash of $40 when they take the first ride.</string>
    <string name="they_get_an_ecash_of_20">They get an eCash of $20.</string>
    <string name="whats_app">Whats App</string>
    <string name="share_via">Share via</string>
    <string name="distance">Distance</string>
    <string name="carbon">Carbon</string>
    <string name="you_have_not_taken_any_ride_yet">You have not taken any ride yet.</string>
    <string name="ride_history_">Ride History</string>
    <string name="safety_security"><![CDATA[Safety & security]]></string>
    <string name="account">Account</string>
    <string name="misuse">Misuse</string>
    <string name="ride_fare"><![CDATA[Ride & Fare]]></string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="ola_s1_lite">OLA S1 Lite</string>
    <string name="zte_scooter">ZTE Scooter</string>
    <string name="allo_cycle">Allo Cycle</string>
    <string name="how_to_use">How to use ?</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="offers1">Offers</string>
    <string name="ride_coupons1">Ride coupons</string>
    <string name="you_have_not_taken_any_ride_yet1">you_have_not_taken_any_ride_yet</string>
    <string name="help_support1">help_support</string>
    <string name="how_to_use1">how_to_use?</string>
    <string name="allo_cycle1">allo_cycle</string>
    <string name="zte_scooter1">zte_scooter</string>
    <string name="ola_s1_lite1">ola_s1_lite</string>
    <string name="frequently_asked_questions1">frequently_asked_questions</string>
    <string name="ride_fare1">ride_fare</string>
    <string name="Account1">account</string>
    <string name="Ride_fare2">Ride_fare</string>
    <string name="Help_support2">help_support1</string>
    <string name="frequently_asked_questions_">Frequently asked questions</string>
    <string name="help_support_"><![CDATA[Help&Support]]></string>
    <string name="how_to_use_it_">How to use it?</string>
    <string name="ride_fare_">Ride fare</string>
    <string name="account_">Account</string>
    <string name="misuse_">Misuse</string>
    <string name="safety_security_"><![CDATA[Safety&security]]></string>
    <string name="you_have_not_taken_any_ride_yet_">You have not taken any ride yet.</string>
    <string name="no_offers_coupons_available_at_the_moment_please_check_again_later_">No offers/coupons available at the moment. Please check again later.</string>
    <string name="Ride_history_">Ride_history_</string>
    <string name="Ride_history__">Ride History</string>
    <string name="pay_now">Pay Now!</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="total_amount">Total amount:</string>
    <string name="pay">Pay</string>
</resources>