<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="184sp"
        android:layout_height="36sp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/help_support"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="89sp"
        android:layout_height="21sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/how_to_use"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="match_parent"
        android:layout_height="108sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="19dp"
        android:scaleType="centerCrop"
        android:src="@drawable/frame_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="58sp"
        android:layout_height="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/allo_cycle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="58sp"
        android:layout_height="18sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="71dp"
        android:fontFamily="@font/poppins"
        android:text="@string/zte_scooter"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="58sp"
        android:layout_height="18sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/poppins"
        android:text="@string/ola_s1_lite"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="21sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/frequently_asked_questions"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/ride_fare"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:text="@string/account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/misuse"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/safety_security"
        android:background="@color/white"
        android:textAllCaps="false"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button26" />

</androidx.constraintlayout.widget.ConstraintLayout>