<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="507sp"
            android:layout_marginTop="44dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="306dp"
            android:layout_marginEnd="23dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins"
            android:text="@string/skip_"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Name1"
            android:layout_width="140sp"
            android:layout_height="30sp"
            android:layout_marginStart="91dp"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/pick_a_vehicle1"
            android:textAlignment="center"
            android:textColor="@color/green_dark"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="312sp"
            android:layout_height="68sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="34dp"
            android:fontFamily="@font/poppins"
            android:text="@string/to_unlock_your_vehicle_either_scan_the_qr_code_or_enter_the_vehicle_code_pull_up_the_lever_to_remove_the_stand_start_your_journey"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="265sp"
            android:layout_height="50sp"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/roundbutton"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next_"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>